# finances-dbt

./: README.md  dbt_project.yml  packages.yml  pyproject.toml
models/: sources.yml
models/dimensions/: _dimensions__models.yml  dim_categories.sql  dim_dates.sql
models/facts/: fact_bank_transactions.sql  fact_sgd_exchange_rates_long.sql
models/facts/bank/: fact_bank_transactions.sql
models/facts/fx/: fact_eur_exchange_rates_long.sql  fact_sgd_exchange_rates_long.sql
models/facts/invm/: fact_invm_balances_line_items.sql  fact_invm_balances_sgd_movement.sql
models/marts/: mart_eur_bank_balances.sql  mart_sgd_balances.sql  mart_sgd_bank_balances.sql  mart_sgd_bank_transactions.sql  mart_transactions.sql
models/marts/bank/: mart_eur_bank_transactions.sql  mart_sgd_bank_transactions.sql
models/marts/invm/: mart_sgd_invm_balances.sql
models/staging/bank/eur/: stg_bank_de_eur_n26.sql  stg_bank_fr_eur_hsbcfr.sql  stg_bank_sg_eur_revolut_v1.sql  stg_bank_sg_eur_revolut_v2.sql
models/staging/bank/gsheet/: gsheet_sources.yml  stg_bank_de_eur_amex.sql  stg_bank_de_eur_amex_payback.sql  stg_bank_de_eur_amex_rose.sql  stg_bank_de_eur_miles_more.sql  stg_bank_de_eur_n26.sql  stg_bank_de_eur_wise.sql  stg_bank_fr_eur_hsbcfr.sql  stg_bank_gb_gbp_wise.sql  (+10 more)
models/staging/fx/: fx_sources.yml  stg_fx_fx_eur.sql  stg_fx_fx_sgd.sql  stg_fx_fx_sgd_from_eur_ecb.sql
models/staging/invm/: invm_sources.yml  stg_invm_hkdusd_invm.sql  stg_invm_sgd_cdp_invm.sql  stg_invm_sgd_fundingsoc.sql  stg_invm_sgd_invm.sql  stg_invm_usd_invm.sql
seeds/: categories.csv
(+12 files in other folders)
